# uv-test-case

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/cars/: main.py  pyproject.toml
src/cats/: main.py  pyproject.toml
src/dogs/: main.py  pyproject.toml
src/uv_test_case/: __init__.py  main.py
