[project]
name = "uv-test-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "msgspec>=0.18.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# NOTE: taken from here: https://github.com/astral-sh/uv/issues/6293#issuecomment-230032911
packages = ["."]
