[project]
name = "dogs"
version = "0.1.0"
description = "Dogs workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sanic>=24.6.0",
    "msgspec>=0.18.6",
    "sanic-ext>=23.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# NOTE: taken from here: https://github.com/astral-sh/uv/issues/6293#issuecomment-230032911
packages = ["."]
